name:                servant-playground
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/nathanic/servant-playground#readme
license:             BSD3
license-file:        LICENSE
author:              Nathan P. Stien
maintainer:          nathanism@gmail.com
copyright:           Copyright: (c) 2016 Nathan P. Stien
category:            scratch
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , containers
                     , either
                     , http-types
                     , servant-server
                     , text
                     , wai
                     , wai-websockets
                     , warp
                     , websockets
  default-language:    Haskell2010

executable servant-playground-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , servant-playground
  default-language:    Haskell2010

test-suite servant-playground-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , servant-playground
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/nathanic/servant-playground
